module(
    name = "cpu_monitor",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0")

single_version_override(
    module_name = "googletest",
    version = "1.17.0",
    patches = ["//:googletest-bazel9-compat.patch"],
    patch_strip = 1,
)
